updated to use a image processing class that is more event driven

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ MODEL=yorickvp/llava-13b:2facb4a474a0462c15041b78b1ad70952ea46b5ec6ad29583c0b29d
 REPLICATE_API_TOKEN=r8_xxxx
 OUTPUT_TOPIC=vision/seenapp
 STATUS_TOPIC=vision/status
+RECEIPT_TOPIC=receipts/vision
