--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "file-type": "^18.5.0",
     "mqtt": "^5.1.3",
+    "openai": "^4.63.0",
     "replicate": "^0.20.1",
     "winston": "^3.11.0"
   },
